--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,6 +29,18 @@
   padding: 18px 35px;
   border: none;
 }
+.section-title {
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+}
+.section-description {
+  font-size: 18px;
+  color: #757575;
+}
+.secondary-bg {
+  background-color: #fff8f3;
+}
 /* nav style */
 nav {
   display: flex;
@@ -71,4 +83,23 @@ nav ul a {
 }
 .banner-content {
   max-width: 580px;
+}
+/* about styles*/
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin: 130px;
+}
+.about-items {
+  display: flex;
+  justify-content: space-around;
+}
+.item-description {
+  font-weight: bold;
+}
+/* main styles */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
 }
