--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -41,6 +41,9 @@
 .secondary-bg {
   background-color: #fff8f3;
 }
+.text-centre {
+  text-align: center;
+}
 /* nav style */
 nav {
   display: flex;
@@ -89,7 +92,6 @@ nav ul a {
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin: 130px;
 }
 .about-items {
   display: flex;
@@ -102,4 +104,17 @@ nav ul a {
 main {
   max-width: 1140px;
   margin: 0 auto;
+}
+.skill-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 6px 50px 0px #ffffff;
+}
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
 }
